[package]
name = "dysnomia-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
log = { version = "*", features = ["release_max_level_warn"] }

# Optimize libraries
[profile.dev.package."*"]
opt-level = 3

# Slightly optimize this code
[profile.dev]
opt-level = 1

# Aggressive optimizations
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
